<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/editModeId"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/menu_icon_toggleEdit_title"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/textId"
        android:icon="@drawable/menu_icon_text"
        android:title="@string/menu_icon_text_title"
        app:showAsAction="always"/>
    <item
        android:id="@+id/fingerId"
        android:icon="@drawable/menu_icon_finger"
        android:title="@string/menu_icon_finger_title"
        app:showAsAction="always" />
    <item
        android:id="@+id/lineId"
        android:icon="@drawable/menu_icon_line"
        android:title="@string/menu_icon_line_title"
        app:showAsAction="always" />
    <item
        android:id="@+id/circleId"
        android:icon="@drawable/menu_icon_circle"
        android:title="@string/menu_icon_circle_title"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/squareId"
        android:icon="@drawable/menu_icon_square"
        android:title="@string/menu_icon_square_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/triangleId"
        android:icon="@drawable/menu_icon_triangle"
        android:title="@string/menu_icon_triangle_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/combiShapeId"
        android:icon="@drawable/combi_shape_icon"
        android:title="@string/option_menu_combi_shapes"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/newCombiShapeId"
                android:title="@string/option_menu_combi_shape_new"/>
        </menu>
    </item>

    <item
        android:id="@+id/deleteId"
        android:title="@string/option_menu_delete"/>
    <item
        android:id="@+id/clearId"
        android:title="@string/clear" />
    <item
        android:id="@+id/saveId"
        android:title="@string/option_menu_save" />
    <item
        android:id="@+id/loadId"
        android:title="@string/option_menu_load" />
    <item
        android:id="@+id/exportId"
        android:title="@string/option_menu_export"/>
    <item
      android:id="@+id/deleteStorageId"
      android:title="Delete Savefiles"/>

</menu>
