<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<data>
    <variable
        name="viewModel"
        type="at.ac.univie.se2ws2020team0310.sketch_app.viewmodel.MainActivityViewModel">
    </variable>
</data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/layerswitchbutton"
        app:layout_constraintTop_toTopOf="@+id/layerswitchbutton"
        tools:actionBarNavMode="standard"
        tools:menu="@menu/menu">

        <!--Constrained the height to at maximum the screen size.-->

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/layerswitchbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.949"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_view" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/sizeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="120dp"
            android:clickable="true"
            android:contentDescription="@string/floatingbutton_textSize"
            android:focusable="false"
            app:backgroundTint="@color/design_default_color_on_secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/size_icon" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/strokeWidthButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/floatingbutton_lineWidth"
            android:focusable="false"
            app:backgroundTint="@color/design_default_color_on_secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.711"
            app:srcCompat="@drawable/menu_icon_stroke_width" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/colorSelectorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:contentDescription="@string/floatingbutton_color"
            android:focusable="false"
            app:backgroundTint="@color/design_default_color_on_secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.949"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.613"
            app:srcCompat="@drawable/menu_icon_colors" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <at.ac.univie.se2ws2020team0310.sketch_app.view.CanvasView
            android:id="@+id/canvasView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="77dp" />

        <SeekBar
            android:id="@+id/strokeWidthSeekBar"
            android:layout_width="180dp"
            android:layout_height="24dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/canvasView"
            app:layout_constraintEnd_toStartOf="@+id/strokeWidthButton"
            app:layout_constraintHorizontal_bias="0.867"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.688"
            tools:visibility="invisible" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:ems="10"
            android:hint="@string/enter_text_here"
            android:inputType="textPersonName"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/colorSelectorButton"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/strokeWidthSeekBar"
            app:layout_constraintVertical_bias="0.354" />

        <Button
            android:id="@+id/toggleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickDoneButton"
            android:text="@string/done"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/colorSelectorButton"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/strokeWidthSeekBar"
            app:layout_constraintVertical_bias="0.058" />

        <Button
            android:id="@+id/nameCombiShape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSetCombinedShapeName"
            android:text="@string/ok"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/colorSelectorButton"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/strokeWidthSeekBar"
            app:layout_constraintVertical_bias="0.058" />

        <Button
            android:id="@+id/saveCombiShape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSaveCombinedShape"
            android:text="@string/save"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/colorSelectorButton"
            app:layout_constraintHorizontal_bias="0.646"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/strokeWidthSeekBar"
            app:layout_constraintVertical_bias="0.806" />

        <SeekBar
            android:id="@+id/sizeSeekBar"
            android:layout_width="180dp"
            android:layout_height="24dp"
            android:max="300"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/canvasView"
            app:layout_constraintEnd_toStartOf="@+id/sizeButton"
            app:layout_constraintHorizontal_bias="0.867"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.792"
            tools:visibility="invisible" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/italicButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/floatingbutton_italic"
            android:onClick="onClickItalicButton"
            android:visibility="invisible"
            app:backgroundTint="@color/design_default_color_on_secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/layerswitchbutton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.949"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.304"
            app:srcCompat="@drawable/italic" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/boldButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/floatingbutton_bold"
            android:onClick="onClickBoldButton"
            android:visibility="invisible"
            app:backgroundTint="@color/design_default_color_on_secondary"
            app:layout_constraintBottom_toTopOf="@+id/layerswitchbutton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.949"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.553"
            app:srcCompat="@drawable/bold" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/underlineButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/floatingbutton_underline"
            android:onClick="onClickUnderlineButton"
            android:visibility="invisible"
            app:backgroundTint="@color/design_default_color_on_secondary"
            app:layout_constraintBottom_toTopOf="@+id/colorSelectorButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.949"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.643"
            app:srcCompat="@drawable/underline" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:checkedButton="@+id/layer1selector"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintVertical_bias="0.50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/layer1selector"
                android:layout_width="wrap_content"
                android:visibility="invisible"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked" />

            <RadioButton
                android:id="@+id/layer2selector"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                 />

            <RadioButton
                android:id="@+id/layer3selector"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                />
        </RadioGroup>

        <ToggleButton
            android:id="@+id/switchLayer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:checked="true"
            android:visibility="invisible"
            app:layout_constraintHorizontal_bias="0.712"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.553" />

        <ToggleButton
            android:id="@+id/switchLayer1"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.712"
            app:layout_constraintStart_toStartOf="parent"
            android:checked="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.437" />

        <ToggleButton
            android:id="@+id/switchLayer2"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.712"
            android:checked="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.494" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>